version 2.1.2
- fixed issue 9 (https://github.com/pchalamet/cassandra-sharp/issues/9)
- read again asap if buffering mode 
- fixd invalid utf8 string len when using char >= 0x80

version 2.1.1
- fixed issue 5 (https://github.com/pchalamet/cassandra-sharp/issues/5

version 2.1.0.0
- node discovery implementation
- fixed guid serialization
- dynamic column width
- fixed eventually incorrect order of column in cqlplus
- fixed connection recovery (OnFailure event)
- use object (supporting anonyous type) instead of object[] for prepared statement
- one less tpl task per request & waiting is done via tpl

version 2.0.7.0
- mono compatibility (for cqlplus)
- support for port in cqlplus

version 2.0.6.0 (beta)
- renamed cqlsh to cqlplus to avoid confusion
- cqlplus changes:
  changed cqlplus help system
  added source & exec
  support for enum for cqlplus command args
  fix source when error encountered

version 2.0.5.0 (beta)
- refactoring of cqlsh grammar - no modification required to add new commands
- generic help based on registered commands

version 2.0.4.0 (beta)
- change cqlsh value formatting
- fixed map/set/list bin reader
- ExecuteNonQuery for prepared statement
- cqlsh debug logger
- commands handling refactoring
- login/password for cqlsh

version 2.0.3.0 (beta)
- support for list, set, map
- fixed null byte array
- support for streaming directly from socket (default) or from memory stream
- tabular display in cqlsh
- created Samples project (removed CassandraClient)

version 2.0.2.0 (beta)
- fix deadlock when query fails
- expose IFrameReader and IFrameWriter instead of Stream
- release stream id earlier

version 2.0.1.0 (beta)
- full async support with both streaming and future
- no buffering while reading
- reliable error handling while performing async IO

version 2.0.0.0 (beta)
- most part of CassandraSharp is rewritten
- support only CQL, Thrift is dead
- missing features will be brought again is future versions

version 1.0.0.0 (beta)