@@ -58,7 +58,6 @@
     <Compile Include="Exceptions\CassandraException.cs" />
     <Compile Include="Exceptions\InvalidException.cs" />
     <Compile Include="Exceptions\ReadTimeOutException.cs" />
-    <Compile Include="Exceptions\ClientRequestAbortedException.cs" />
     <Compile Include="Exceptions\SyntaxException.cs" />
     <Compile Include="Exceptions\UnauthorizedException.cs" />
     <Compile Include="Exceptions\UnknownResponseException.cs" />
