@@ -1,9 +1,7 @@
 <?xml version="1.0"?>
-
 <configuration>
     <configSections>
-        <section name="CassandraSharp"
-                 type="CassandraSharp.SectionHandler, CassandraSharp" />
+        <section name="CassandraSharp" type="CassandraSharp.SectionHandler, CassandraSharp"/>
     </configSections>
 
     <CassandraSharp>
@@ -15,7 +13,6 @@
     </CassandraSharp>
 
     <startup>
-        <supportedRuntime version="v4.0"
-                          sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 </configuration>
